<resources>
    <string name="app_name" translatable="false">Hancel</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="send_to">Share:</string>
    <string name="drawer_separator1">Hancel Info</string>
   

    <!-- Hardware button alarm service -->
    <string name="no_panic_alert">No Alerts</string>
    <string name="panic_alert_sent">Alert Sent</string>
    <string name="tracking_invalid_contac_numbers">%count Contact numbers are not valid</string>
    <string name="tracking_SMS_message">[ALERT]I need help. my location is: %map and my battery level is %battery Inform the authorities.\n By Hancel APP, security app</string>
    <string name="no_configured_rings">No configured rings found</string>
    <string name="map_provider">http://maps.google.com/?q=</string>
    <string name="any_sms_sent">Impossible to send SMS message to %count1 contacts of </string>
    <string name="sms_sent">SMS alert message sent</string>
    <string name="sms_not_sent">Not Sent: No service available. Check your SIM-card.</string>
    <string name="sms_generic_fail">Not Sent: Generic failure."</string>
    <string name="sms_null_pdu">Not Sent: NULL PDU."</string>
    <string name="sms_radio_off">ALERT NOT SENT. Check your mobile is not in airplane mode. </string>
    <string name="sms_delivered">SMS alert message Delivered.</string>
    <string name="sms_canceled">Not Delivered: Canceled.</string>

    <!-- Main Layout -->
    <string name="button_rings">Rings</string>
    <string name="button_about">About</string>
    <string name="button_history">History</string>
    <string name="button_help">Help</string>
    <string name="button_share">Share</string>
    <!-- nuevo -->
    <string name="button_home">Home</string>
    <string name="msg_rings_empty">Add ring</string>
    <string name="hint_ring_name">Ring name</string>
    <string name="ring_pick_contact">Add contact</string>
    <string name="msg_ring_contacts_empty">Add contacts</string>
    <string name="msg_ring_help">Make your own trusted contact rings, they will be notified for alerts.</string>
    <string name="error_ring_empty_name">Give a ring name</string>
    <string name="error_ring_empty_contacts">Give at least one contact</string>
    <string name="ring_edit_save">SAVE</string>
    <string name="ring_save">SAVE RING</string>
    <string name="ring_desc_contacts">contacts</string>
    <string name="msg_home_help">Share your location with Hancel anonymously or notify your trusted rings in any moment.</string>
    <string name="alert_send_sms">SEND BY SMS</string>
    <string name="alert_send_share">SHARE</string>
    <string name="alert_help">Hancel will generate a link with your position or send an SMS to your active ring contacts</string>
    <string name="msg_home_generate_link">Building tracking link...</string>
    <string name="home_tracking_service">Sharing my location:</string>
    <string name="msg_alert_not_rings">There are not active rings</string>

    <!-- About -->
    <string formatted="false" name="about_licence_l1" translatable="false">Hancel %s (rev%s) Parallel Zero</string>
    <string name="about_licence_l2" translatable="false">(rfc 3261) GNU GPL License V2</string>
    <string name="about_based_title">Based on</string>
    <string name="about_based_link">http://www.linphone.org\n© 2011 Belledonne Communications</string>
    <string name="about_text_colaboration">Colaboration</string>
    <string name="about_survey_title">Check your risk level</string>
    <string name="about_survey_link">http://bit.ly/hancel_riesgos</string>
    <string name="content_description_welcome">Hancel</string>
    <!--<string name="image_credits_value">using alert by Alain LOUBET, motion by Juan Pablo Bravo, share by Housin Aziz, history by Paweł Wypych, telephone by Benny Forsberg, service tower by Nick Abrams, Tools by Kenton Quatman, Smartphone by Yamini Chandra, Trash by Filip Malinowski, Speech by P.J. Onori, Wireless by Thomas Le Bas y Minicons by Dani Rolli from the noun project under CC-BY 3.0 and The PICOL-Icons by Melih Bilgil under CC-BY 3.0</string>-->
    <string name="image_credits_value">Andrés Felipe Calderón @unjuguetero, Alvaro Antonio Vanegas @hpsaturn, Amalia Toledo @amalia_toledo, Gloria Meneses @gpmeneses, Juan Diego CastaNeda @ María del Pilar Saenz @mapisaro</string>
    <string name="image_credits">Credits in alphabetic order:</string>
    <string name="hint_tracking_name">Name or alias of tracking</string>
    <string name="button_continuar">CONTINUE</string>
    <string name="msg_track_alias">Please choose track name</string>
    <string name="button_map">Map</string>
    <string name="hancel_based_on">Based on</string>
    <string name="content_description_hancel_fractual">Hancel App by Fractual</string>
    <string name="hancel_fractual_link">http://hanselapp.com</string>
    <string name="msg_ring_desc_hint">swipe left to delete ring, swipe right to enable/disable ring.</string>
    <string name="msg_parners_empty">Not active partners</string>
    <string name="msg_alias_help">Please choose alias or nickname. This alias is showed for your partners</string>
    <string name="hint_alias_alias">Alias or nickname</string>
    <string name="alias_accept">ACCEPT</string>
    <string name="msg_track_invalid">Track invalid</string>
    <string name="rings_label_from_contacts">From Contacts..</string>
    <string name="rings_label_from_qrcode">From QR code..</string>
    <string name="content_share_title">Share Hancel with:</string>
</resources>
