<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/bt_drawer_grey_home"
            android:title="@string/button_home" />
        <item
            android:id="@+id/nav_rings"
            android:icon="@drawable/bt_drawer_grey_rings"
            android:title="@string/button_rings" />

        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/bt_drawer_grey_history"
            android:title="@string/button_map" />


    </group>

    <item android:title="Communicate">
        <menu>

            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/bt_drawer_grey_help"
                android:title="@string/button_help" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/bt_drawer_grey_about"
                android:title="@string/button_about" />
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />

        </menu>
    </item>

</menu>