<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl_ring_edit_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="10dp">

        <EditText
            android:id="@+id/et_ring_edit_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_ring_name" />

        <Button
            android:id="@+id/bt_ring_edit_pick_contact"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_ring_edit_name"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/ring_pick_contact"
            android:textColor="@color/white" />

    </RelativeLayout>


    <TextView
        android:id="@+id/tv_ring_contacts_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_rings_header"
        android:gravity="center"
        android:text="@string/msg_ring_contacts_empty" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_contacts"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_below="@id/rl_ring_edit_header"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:gravity="center"
        android:visibility="visible" />

    <Button
        android:id="@+id/bt_ring_edit_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/ring_save"
        android:textColor="@color/white" />

</RelativeLayout>