<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/sv_about"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoHancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_welcome"
                android:src="@drawable/logo_57x57" />

            <TextView
                android:id="@+id/tv_welcome_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/text_default"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/AboutTextL1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25sp"
                android:text="@string/about_licence_l1"
                android:textColor="@color/text_contrast"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/AboutTextL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="8sp"
                android:text="@string/about_licence_l2"
                android:textColor="@color/text_contrast"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/textColaboration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="35dp"
                android:text="@string/about_text_colaboration"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/text_default"
                android:textSize="15sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:gravity="center"
                android:paddingTop="10dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/logoFlip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_description_welcome"
                    android:src="@drawable/ong_3" />

                <ImageView
                    android:id="@+id/logoKarisma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_description_welcome"
                    android:paddingTop="15sp"
                    android:src="@drawable/karisma" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>